--- a/ElectoMonad.cabal
+++ b/ElectoMonad.cabal
@@ -63,7 +63,9 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib
+    exposed-modules:
+        MyLib,
+        DHondt
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -88,7 +90,8 @@ test-suite ElectoMonad-test
     default-language: Haskell2010
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        TestDHondt
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -105,4 +108,9 @@ test-suite ElectoMonad-test
     -- Test dependencies.
     build-depends:
         base ^>=4.15.1.0,
+        tasty,
+        tasty-smallcheck,
+        tasty-quickcheck,
+        tasty-hunit,
+        tasty-discover,
         ElectoMonad
